# learn-generative-ai

./: README.md
01_microservices_all_in_one_platform/00_python_poetry/00_poetry_projects/00_assistant_with_poetry/: .env.example  assistant.json  pyproject.toml
01_microservices_all_in_one_platform/00_python_poetry/00_poetry_projects/00_assistant_with_poetry/src/assistant/: assistant.py
01_microservices_all_in_one_platform/00_python_poetry/00_poetry_projects/00_assistant_with_poetry/src/assistant/models/: pydantic_models.py
01_microservices_all_in_one_platform/00_python_poetry/00_poetry_projects/00_assistant_with_poetry/src/database/: database.py
01_microservices_all_in_one_platform/00_python_poetry/00_poetry_projects/00_assistant_with_poetry/src/main/: main.py
