[tool.poetry]
name = "function-calling"
version = "0.1.0"
description = ""
authors = ["Harry5174 <harisjaved010@gmail.com>"]
readme = "README.md"
packages = [{include = "function_calling", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
openai = "^1.13.3"
sqlalchemy = "^2.0.28"
types-sqlalchemy = "^1.4.53.38"
sqlmodel = "^0.0.16"
packaging = "^24.0"
requests = "^2.31.0"
pydantic = "^2.6.3"
datetime = "^5.4"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy.plugins.sqlalchemy.plugin"]